[GTK] Scrolling doesn't work in WebKit2 since r110185 https://bugs.webkit.org/show_bug.cgi?id=81779

Patch by Zan Dobersek <zandobersek@gmail.com> on 2012-04-04
Reviewed by James Robinson.

Bring back functionality of the ScrollAnimatorNone for ports that
use a fallback timer for animation frames.

No new tests - only restoring previous functionality.

* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::ScrollAnimatorNone):
(WebCore::ScrollAnimatorNone::fireUpAnAnimation):
(WebCore):
(WebCore::ScrollAnimatorNone::animationTimerFired):
(WebCore::ScrollAnimatorNone::startNextTimer):
(WebCore::ScrollAnimatorNone::animationTimerActive):
(WebCore::ScrollAnimatorNone::stopAnimationTimerIfNeeded):
* platform/ScrollAnimatorNone.h:
(ScrollAnimatorNone):

git-svn-id: svn://svn.chromium.org/blink/trunk@113161 bbb929c8-8fbe-4397-9dbb-9b2b20218538